--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
 </head>
 <body>
 
-    <h1 id='messages'></h1>
+    <!-- <h1 id='messages'></h1>
     <h1 id="xMax"></h1>
     <h1 id="xMin"></h1>
     <h1 id="yMax"></h1>
     <h1 id="yMin"></h1>
     <h1 id="zMax"></h1>
     <h1 id="zMin"></h1>
-    <div id="indicator"></div>
+    <div id="indicator"></div> -->
 
     
 
@@ -60,34 +60,36 @@
         
 
         // Setting up the main object:
-        var littleCubes = new Array();
-        littleCubes[0] = new Array();
-        littleCubes[0][0] = new Array();
+        // var littleCubes = new Array();
+        // littleCubes[0] = new Array();
+        // littleCubes[0][0] = new Array();
+        // var littleCubeGeometry = new THREE.BoxGeometry(1, 1, 1);
+
         // var geometry = new THREE.IcosahedronGeometry(1, 0);
-        var littleCubeGeometry = new THREE.BoxGeometry(1, 1, 1);
-        // var geometry = new THREE.CubeGeometry(1, 1, 1);
+        var geometry = new THREE.BoxGeometry(1, 1, 1);
         var material = new THREE.MeshPhongMaterial( { color: 0xdddddd, specular: 0x009900, shininess: 30, shading: THREE.FlatShading } );
 
 
         // Generate a matrix of cubes for a rubix cube:
-        for(var n1=0;n1<3;n1++) {
-            for(var n2=0;n2<3;n2++) {
-                for(var n3=0;n3<3;n3++) {
-                    littleCubes[n3] = new THREE.Mesh( littleCubeGeometry, material );
-                }
-                littleCubes[n1][n2] = littleCubes[n2];
-            }
-        }
+        // for(var n1=0;n1<3;n1++) {
+        //     for(var n2=0;n2<3;n2++) {
+        //         for(var n3=0;n3<3;n3++) {
+        //             littleCubes[n3] = new THREE.Mesh( littleCubeGeometry, material );
+        //         }
+        //         littleCubes[n1][n2] = littleCubes[n2];
+        //     }
+        // }
         // littleCubes[0] = new THREE.Mesh( littleCubeGeometry, material );
         // littleCubes[1] = new THREE.Mesh( littleCubeGeometry, material );
         // littleCubes[2] = new THREE.Mesh( littleCubeGeometry, material );
 
         // var littleCube[1].translateX(1);
 
-        var mainObject = new THREE.Object3D(); // Group
-        mainObject.add(littleCubes[0].translateX(-1.1));
-        mainObject.add(littleCubes[1]);
-        mainObject.add(littleCubes[2].translateX(1.1));
+        // var mainObject = new THREE.Object3D(); // Group
+        var mainObject = new THREE.Mesh( geometry, material );
+        // mainObject.add(littleCubes[0].translateX(-1.1));
+        // mainObject.add(littleCubes[1]);
+        // mainObject.add(littleCubes[2].translateX(1.1));
         // mainObject.castShadow = true;
         scene.add( mainObject );
 
@@ -120,7 +122,6 @@
             // mainObject.rotation.x -= 0.05;
             // mainObject.rotation.y += 0.0;
             mainObject.__dirtyPosition = true;
-
             renderer.render(scene, camera);
         };
 
